<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddCryptogramFragment">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/cryptogram_name"
        app:layout_constraintBottom_toBottomOf="@id/txtCryptogramName"
        app:layout_constraintEnd_toStartOf="@id/txtCryptogramName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtCryptogramName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtCryptogramName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="8dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/txtCryptogramSolution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/labelName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/labelSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solution_label"
        app:layout_constraintBottom_toBottomOf="@id/txtCryptogramSolution"
        app:layout_constraintEnd_toStartOf="@id/txtCryptogramSolution"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtCryptogramSolution"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtCryptogramSolution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/txtCryptogramName"
        app:layout_constraintTop_toBottomOf="@+id/txtCryptogramName"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/addCryptogramButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/add_cryptogram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/easy_attempts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_attempts"
        app:layout_constraintBottom_toBottomOf="@+id/easy_attempts_txt"
        app:layout_constraintEnd_toStartOf="@+id/easy_attempts_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/easy_attempts_txt"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/easy_attempts_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtCryptogramSolution"
        app:layout_constraintTop_toBottomOf="@id/txtCryptogramSolution" />

    <TextView
        android:id="@+id/normal_attempts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_attempts"
        app:layout_constraintBottom_toBottomOf="@+id/normal_attempts_txt"
        app:layout_constraintEnd_toStartOf="@+id/normal_attempts_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/normal_attempts_txt"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/normal_attempts_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtCryptogramSolution"
        app:layout_constraintTop_toBottomOf="@id/easy_attempts_txt" />

    <TextView
        android:id="@+id/hard_attempts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/hard_attempts"
        app:layout_constraintBottom_toBottomOf="@+id/hard_attempts_txt"
        app:layout_constraintEnd_toStartOf="@id/hard_attempts_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hard_attempts_txt"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/hard_attempts_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/addCryptogramButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtCryptogramSolution"
        app:layout_constraintTop_toBottomOf="@id/normal_attempts_txt"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>