<resources>
    <string name="app_name">Crypto6300</string>
    <string name="welcome_message">Welcome</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_password_required">Password required</string>
    <string name="error_username_required">Username required</string>
    <string name="error_wrong_username_or_password">Incorrect username or password.</string>

    <!-- administrator menu -->
    <string name="administrator_menu">Administrator Menu</string>
    <string name="logout">Logout</string>

    <!-- player menu -->
    <string name="player_menu">Player Menu</string>

    <!-- add cryptogram -->
    <string name="cryptogram_name">Cryptogram Name:</string>
    <string name="add_cryptogram">Add Cryptogram</string>
    <string-array name="category_items">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
    <string name="category">Category</string>
    <string name="solution">Solution</string>
    <string name="solution_label">Solution:</string>
    <string name="easy_attempts">Easy Attempts</string>
    <string name="normal_attempts">Normal Attempts</string>
    <string name="hard_attempts">Hard Attempts</string>
    <string name="error_positive_number_required">Number required</string>
    <string name="error_negative_attempts">Positive Number required</string>
    <string name="error_cryptogram_name">Cryptogram Name required</string>
    <string name="error_cryptogram_solution">Cryptogram Solution required</string>
    <string name="cryptogram_was_added">Cryptogram \'%s\' was added.</string>
    <string name="cryptogram_exists">A cryptogram with that name already exists.</string>
    <string name="warning">Warning!</string>
    <string name="check_normal_attempts">Are you sure? Normal category has more attempts than Easy category!</string>
    <string name="check_hard_attempts">Are you sure? Hard category doesn\'t have the lowest attempts!</string>

    <!-- add player -->
    <string name="add_player">Add Player</string>
    <string name="player_first_name_label">First Name:</string>
    <string name="player_last_name_label">Last Name:</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="category_label">Category:</string>
    <string name="error_firstname">First name is required.</string>
    <string name="error_lastname">Last name is required.</string>
    <string name="error_username">Username is required.</string>
    <string name="error_password">Password is required.</string>
    <string name="error_firstname_length">First name must be between 3 and 25 letters.</string>
    <string name="error_lastname_length">Last name must be between 3 and 25 letters.</string>
    <string name="error_username_length">Username must be between 3 and 25 letters.</string>
    <string name="error_password_length">Password must be between 3 and 25 letters.</string>
    <string name="username_exists">A user with that username already exists.</string>
    <string name="user_was_added">User \'%s\' was added.</string>

    <!-- choose cryptogram -->
    <string name="choose_cryptogram">Choose Cryptogram</string>
    <string name="in_progress">in-progress</string>
    <string name="attempts">Attempts Remaining: </string>

    <!-- game over -->
    <string name="game_over">Game Over</string>
    <string name="cryptograms_won">Cryptograms Won:</string>
    <string name="cryptograms_lost">Cryptograms Lost:</string>

    <!-- game won -->
    <string name="game_won">You Won The Game</string>
    <string name="congrats">Congratulations!</string>

    <!-- player statistics -->
    <string name="player_statistics">Player Statistics</string>

    <!-- solve cryptogram -->
    <string name="solve_cryptogram">Solve Cryptogram</string>
    <string name="success">Success!</string>
    <string name="error">Error!</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="error_username_chars">Username must use only be letters, numbers, or underscores.</string>
    <string name="error_password_chars">Password must use only be letters, numbers, or underscores.</string>
    <string name="error_letters_only">First name must be letters only.</string>
    <string name="no_cryptograms_available">No cryptograms available.</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="previous_attempt">Previous attempt:</string>
    <string name="label_encrypted_phrase">Encrypted Phrase:</string>

</resources>
